tests/ui/rfcs/rfc-2632-const-trait-impl/effects/minicore.stderr
error[E0493]: destructor of `Self` cannot be evaluated at compile-time
  --> $DIR/minicore.rs:503:9
   |
LL |         *self = source.clone()
   |         ^^^^^
   |         |
   |         the destructor for this type cannot be evaluated in constant functions
   |         value is dropped here

error[E0493]: destructor of `T` cannot be evaluated at compile-time
  --> $DIR/minicore.rs:513:35
   |
LL | const fn drop<T: ~const Destruct>(_: T) {}
   |                                   ^      - value is dropped here
   |                                   |
   |                                   the destructor for this type cannot be evaluated in constant functions

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0493`.
